Cleaning code by moving logic in controllers to services and adding custom messages to custom exceptions